<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/md_theme_light_surfaceVariant"
                    android:descendantFocusability="beforeDescendants"
                    android:drawableLeft="@drawable/baseline_search_24"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Q-CON"
                    android:padding="10dp" />

                <ImageButton
                    android:id="@+id/btWise"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_library_books_24" />

            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llGeneralDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvStockName"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Ngern Tid Lor" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvStockCode"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="BKK:TIDLOR" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvRanking"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Jitta Ranking #1 from 812" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/seed"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvStockScore"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"
                        android:textColor="@color/md_theme_light_onPrimary"
                        tools:text="7.36" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jitta_score"
                        android:textColor="@color/md_theme_light_onPrimary" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btFollow"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                tools:text="@string/jitta_follow" />

            <LinearLayout
                android:id="@+id/llGraphDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Price(15 Mar 2024)" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvPrice"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="22.40" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvPercentageDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Under Jitta Line" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvPercentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="49.09%" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFactors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jitta_factors" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jitta_company_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jitta_company_sector" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSector"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="Consumer staples" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:dividerColor="@color/md_theme_light_outline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jitta_company_industry" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvIndustry"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        tools:text="Food Product" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:dividerColor="@color/md_theme_light_outline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvWebsite"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:autoLink="web"
                    android:textColorLink="@color/md_theme_light_primary"
                    tools:text="www.google.com" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:dividerColor="@color/md_theme_light_outline" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>